--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "movies",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "axios": "^0.19.0",
     "connected-react-router": "^6.6.1",
